--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="shortcut icon" href="https://media.istockphoto.com/id/1174549062/vector/shopping-bag-logo-design-icon-online-shop-symbol-vector-illustrations.jpg?s=612x612&w=0&k=20&c=Zgtz4Nom60--7vsHa54bkKP7waE7pQeMC0dJcggrT8k=" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tatheer Fatima Collection - Simple eCommerce Store</title>
   </head>
